--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
    
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand SubTitle" href="./index.html">Pokedex Kanto</a>
+        <a class="navbar-brand SubTitle" href="./index.html"><img src="https://fontmeme.com/permalink/200206/eae7a5582ddec0d8f65489b06cbebed1.png" alt="fuente-pokemon"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
