--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body>
+<body onload="fetchItems();">
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand SubTitle" href="./index.html"><img
