pagina agua realizada

--- a/agua.html
+++ b/agua.html
@@ -28,7 +28,7 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item active">
-          <a class="nav-link" href="./agua.html">Agua<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#">Agua<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="#">Fuego<span class="sr-only">(current)</span></a>
