Pagina Fuego Creada

--- a/Fuego.html
+++ b/Fuego.html
@@ -31,7 +31,7 @@
           <a class="nav-link" href="#">Agua<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="./Fuego.html">Fuego<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#">Fuego<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="#">Planta<span class="sr-only">(current)</span></a>
