--- a/Planta.html
+++ b/Planta.html
@@ -34,19 +34,19 @@
           <a class="nav-link" href="./Fuego.html">Fuego<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="./Planta.html">Planta<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#">Planta<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="./Psiquico.html">Psiquico<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#">Psiquico<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="./Veneno.html"><span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#">Veneno<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="./Volador.html">Volador<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#">Volador<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="./Bicho.html">Bicho<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#">Bicho<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="#">Normal<span class="sr-only">(current)</span></a>
