--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <a class="nav-link" href="./Veneno.html"><span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="./Volador.html">Volador<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="./Volador.html ">Volador<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="./Bicho.html">Bicho<span class="sr-only">(current)</span></a>
@@ -67,6 +67,7 @@
           <a class="nav-link" href="#">Roca<span class="sr-only">(current)</span></a>
         </li>
       </ul>
+      <img src="./img/5a0596df9cf05203c4b60445.png" width="50px">
     </div>
   </nav>
   <div class="contenedor">
