--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <a class="nav-link" href="./Psiquico.html">Psiquico<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="./Veneno.html"><span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="./Veneno.html">Veneno<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="./Volador.html ">Volador<span class="sr-only">(current)</span></a>
