--- a/Bicho.html
+++ b/Bicho.html
@@ -67,6 +67,7 @@
           <a class="nav-link" href="#">Roca<span class="sr-only">(current)</span></a>
         </li>
       </ul>
+      <img src="./img/MedallaBicho.png" width="50px">
     </div>
   </nav>
   <div class="contenedor">
