--- a/agua.html
+++ b/agua.html
@@ -28,43 +28,43 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Agua<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="./Agua.html">Agua<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Fuego<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="./Fuego.html">Fuego<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Planta<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="./Planta.html">Planta<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Psiquico<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="./Psiquico.html">Psiquico<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Veneno<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="./Veneno.html"><span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Volador<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="./Volador.html ">Volador<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Bicho<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="./Bicho.html">Bicho<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Normal<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="./Normal.html">Normal<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Fantasma<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="./Fantasma.html">Fantasma<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Hielo<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="./Hielo.html">Hielo<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Lucha<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="./Lucha.html">Lucha<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Tierra<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="./Tierra.html">Tierra<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Roca<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="./Roca.html">Roca<span class="sr-only">(current)</span></a>
         </li>
       </ul>
       <img src="./img/Medalla_Agua.png" width="50px">
