Agregacion De tipos y cambios en el menu junto A iconos de elementos

--- a/Acero.html
+++ b/Acero.html
@@ -82,7 +82,8 @@
           <a class="nav-link" href="./Electrico.html">Electrico<span class="sr-only">(current)</span></a>
         </li>
       </ul>
-      <img src="./img/Medalla_Fantasma.png" width="50px">
+      
+      <img src="./img/MedallaTipoAcero.png" width="50px">
     </div>
   </nav>
   <div class="contenedor">
@@ -98,6 +99,11 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
+
+
+
+
+    
 </body>
 
 </html>
