--- a/Veneno.html
+++ b/Veneno.html
@@ -66,6 +66,21 @@
         <li class="nav-item active">
           <a class="nav-link" href="./Roca.html">Roca<span class="sr-only">(current)</span></a>
         </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="./Dragon.html">Dragon<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="./Siniestro.html">Siniestro<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="./Acero.html">Acero<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="./Hada.html">Hada<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="./Electrico.html">Electrico<span class="sr-only">(current)</span></a>
+        </li>
       </ul>
       <img src="./img/MedallaVeneno.png" width="50px">
     </div>
