--- a/agua.html
+++ b/agua.html
@@ -40,7 +40,7 @@
           <a class="nav-link" href="./Psiquico.html">Psiquico<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="./Veneno.html"><span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="./Veneno.html">Veneno<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="./Volador.html ">Volador<span class="sr-only">(current)</span></a>
@@ -65,6 +65,21 @@
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="./Roca.html">Roca<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="./Dragon.html">Dragon<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="./Siniestro.html">Siniestro<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="./Acero.html">Acero<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="./Hada.html">Hada<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="./Electrico.html">Electrico<span class="sr-only">(current)</span></a>
         </li>
       </ul>
       <img src="./img/Medalla_Agua.png" width="50px">
