--- a/index.html
+++ b/index.html
@@ -66,7 +66,23 @@
         <li class="nav-item active">
           <a class="nav-link" href="./Roca.html">Roca<span class="sr-only">(current)</span></a>
         </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="./Dragon.html">Dragon<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="./Siniestro.html">Siniestro<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="./Acero.html">Acero<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="./Hada.html">Hada<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="./Electrico.html">Electrico<span class="sr-only">(current)</span></a>
+        </li>
       </ul>
+      
       <img src="./img/5a0596df9cf05203c4b60445.png" width="50px">
     </div>
   </nav>
@@ -83,6 +99,11 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
+
+
+
+
+    
 </body>
 
 </html>
