--- a/Normal.html
+++ b/Normal.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body onload="fetchItems();">
+<body onload="getPokemon(1)">
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand SubTitle" href="./index.html"><img
