--- a/Acero.html
+++ b/Acero.html
@@ -27,53 +27,45 @@
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item active">
-          <a class="nav-link" href="./Agua.html">Agua<span class="sr-only">(current)</span></a>
+        <li class="nav-item dropdown active">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Tipos 1
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="nav-link" href="./Agua.html">Agua<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="./Fuego.html">Fuego<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="./Planta.html">Planta<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="./Psiquico.html">Psiquico<span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="./Fuego.html">Fuego<span class="sr-only">(current)</span></a>
+        <li class="nav-item dropdown active">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Tipos 2
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="nav-link" href="./Veneno.html">Veneno<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="./Volador.html ">Volador<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="./Bicho.html">Bicho<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="./Normal.html">Normal<span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="./Planta.html">Planta<span class="sr-only">(current)</span></a>
+        <li class="nav-item dropdown active">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Tipos 2
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="nav-link" href="./Fantasma.html">Fantasma<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="./Hielo.html">Hielo<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="./Lucha.html">Lucha<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="./Tierra.html">Tierra<span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="./Psiquico.html">Psiquico<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="./Veneno.html">Veneno<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="./Volador.html ">Volador<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="./Bicho.html">Bicho<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="./Normal.html">Normal<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="./Fantasma.html">Fantasma<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="./Hielo.html">Hielo<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="./Lucha.html">Lucha<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="./Tierra.html">Tierra<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="./Roca.html">Roca<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="./Dragon.html">Dragon<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="./Siniestro.html">Siniestro<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="./Acero.html">Acero<span class="sr-only">(current)</span></a>
+        <li class="nav-item dropdown active">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Tipos 3
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="nav-link" href="./Roca.html">Roca<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="./Dragon.html">Dragon<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="./Siniestro.html">Siniestro<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="./Acero.html">Acero<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="./Hada.html">Hada<span class="sr-only">(current)</span></a>
@@ -83,7 +75,7 @@
         </li>
       </ul>
       
-      <img src="./img/MedallaTipoAcero.png" width="50px">
+      <img src="./img/5a0596df9cf05203c4b60445.png" width="50px">
     </div>
   </nav>
   <div class="contenedor">
