Cambio Imagenes Medallas

--- a/Siniestro.html
+++ b/Siniestro.html
@@ -75,7 +75,7 @@
         </li>
       </ul>
       
-      <img src="./img/5a0596df9cf05203c4b60445.png" width="50px">
+      <img src="./img/MedallaSiniestro.png" width="50px">
     </div>
   </nav>
   <div class="contenedor">
